kubernetes/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zama-jobs-prod
  labels:
    name: zama-jobs-prod
    environment: production
